--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,4 @@ Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 Imports: methods, Rcpp (>= 0.12.3.2)
 LinkingTo: Rcpp, BH
+Suggests: testthat
