--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: r
 cache: packages
 warnings_are_errors: false
-sudo: required
-dist: precise
-before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq g++-4.8
-  - export CXX="g++-4.8" CC="gcc-4.8"
+sudo: false
+compiler:
+  - gcc
+install:
+- CXX="g++-4.8" CC="gcc-4.8"
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
