--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ addons:
     - gcc-4.8
     - g++-4.8
 
-r_github_packages:
-  - jimhester/covr
+r_packages:
+  - covr
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
