--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ dist: trusty
 compiler:
   - gcc
 
-r_binary_packages:
-  - covr
+r_github_packages:
+  - jimhester/covr
 
 after_success:
-  - Rscript -e 'library(covr);codecov()'
+  - Rscript -e 'covr::codecov()'
 
 notifications:
   email:
