big update: don't store pointers to R objects anymore (as SEXP), but rather only indexes to a list managed in R. Rendering the vignette exposed problems that looked like invalid pointers.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,7 @@ useDynLib(dict)
 import(methods, Rcpp)
 export(dict)
 export(numvecdict)
+export(IdxDict)
+export(NumVecDict)
+export(`[[.dict`)
+export(`[[<-.dict`)
