--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: dict
 Type: Package
 Title: Dictionary with arbitrary keys and values
-Version: 0.6.0
+Version: 0.7.0
 Date: 2016-03-15
 Author: Michael Kuhn
 Maintainer: Michael Kuhn <michael.kuhn@gmail.com>
-Description: A dictionary (or hash map) that supports arbirtray keys and values. Currently,
+Description: A dictionary (or hash map) that supports arbitrary keys and values. Currently,
   keys can be numbers, numeric vectors, strings, string vectors.
 License: GPL (>= 2)
 Imports: methods, Rcpp (>= 0.12.3)
